--- a/angular/src/app/views/login/login.component.html
+++ b/angular/src/app/views/login/login.component.html
@@ -1,8 +1,8 @@
-<div class="app-body">
-  <main class="main d-flex align-items-center">
-    <div class="container mt-5 p-2">
+<div class="app-body pt-5">
+  <main class="main d-flex align-items-center pt-5">
+    <div class="container">
       <div class="row">
-        <div class="col-md-4 mx-auto">
+        <div class="col-md-8 mx-auto">
           <div class="card-group">
             <div class="card p-4 mb-0 login-section position-relative">
               <div class="d-flex custom-border">
@@ -16,44 +16,50 @@
                 <p class="text-muted">Sign In to your account</p>
                 <div class="input-group mb-3">
                   <span class="input-group-text">
-                    <i class="fa fa-user"></i>
+                    <i class="icon-user"></i>
                   </span>
                   <input type="email" class="form-control" placeholder="Email" required id="email" name="email"
-                  autocomplete="off" [(ngModel)]="login.email">
+                    [(ngModel)]="login.email" autocomplete="off">
                 </div>
                 <div class="input-group mb-2">
                   <span class="input-group-text">
-                    <i class="fa fa-lock"></i>
+                    <i class="icon-lock"></i>
                   </span>
-                  <input [type]="fieldTextType ? 'text' : 'password' " class="form-control" placeholder="Password" required id="password"
+                  <input type="password" class="form-control" placeholder="Password" required id="password"
                     name="password" [(ngModel)]="login.password">
-                    <div class="input-group-append">
-                      <span class="input-group-text">
-                        <i class="fa" [ngClass]= "{'fa-eye-slash': !fieldTextType, 'fa-eye': fieldTextType }" (click)="toggleFieldTextType()"> </i>
-                      </span>
-                  </div>
                 </div>
                 <div class="form-group mb-4">
-                  <a class="float-left text-primary clr-primary">
-                    <input class="form-check-input" type="checkbox" id="remember" [(ngModel)]="login.remember"
-                      name="remember" style="cursor: pointer;" >
+                  <a href=" #" class="float-left text-primary clr-primary">
+                    <input class="form-check-input" type="checkbox" [(ngModel)]="login.remember" id="remember"
+                      name="remember" value="1">
                     <label class="form-check-label" for="remember">&nbsp; Remember Me</label>
                   </a>
                 </div>
-                <div class="row float-right">
-                  <div class="col-12">
-                    <button class="nav-item btn btn-primary" (click)="doLogin()" [disabled]="!login.email  || !login.password">Login</button>
+                <div class="row">
+                  <div class="col-12 text-center">
+                    <button type="button" class="btn btn-primary px-4" (click)="doLogin()"
+                      [disabled]="!login.email || !login.password">
+                      Login
+                    </button>
                   </div>
                 </div>
               </div>
-              <div class="text-center mt-20 ">
-                <a [routerLink]="['/signup']">If new User, then Please Signup</a>
+            </div>
+            <div class="card text-white bg-secondary py-5 login-section">
+              <div class="card-body text-center">
+                <div>
+                  <h2>Sign up</h2>
+                  <button type="button" class="btn btn-primary mt-3" [routerLink]="['/signup']">Register
+                    Now!</button>
+                  <br>
+                  <button type="button" class="btn btn-primary mt-3" [routerLink]="['/forgot-password']">Forgot
+                    password?</button>
+                </div>
               </div>
             </div>
           </div>
           <!-- <pre [innerHtml]="login | json"> </pre> -->
         </div>
-
       </div>
     </div>
   </main>
