--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -28,12 +28,12 @@
         <a class="nav-link" [routerLink]="['/order-list']">Customers Orders</a>
       </li> -->
     </ul>
-    <form class="d-flex p-2">
+    <!--  <form class="d-flex p-2">
       <div class="input-group">
         <button type="button" class="search-btn btn btn-secondary" (click)="showModel()" id="search-btn"><i
             class="fa fa-search" aria-hidden="true"></i></button>
       </div>
-    </form>
+    </form> -->
     <div *ngIf="currentUser?._id" class="btn-group nav-item slide-down loginUser p-2 mr-3" dropdown dropdownToggle>
       <span class="text-capitalize align-middle" style="cursor: pointer;"> Welcome {{currentUser.firstname}}</span>
       <i class="fa fa-gear test-white pl-2 pt-1 fs-5" style="cursor: pointer;"> </i>
