--- a/angular/src/app/views/signup/signup.component.html
+++ b/angular/src/app/views/signup/signup.component.html
@@ -19,35 +19,17 @@
                     <span class="input-group-text">
                       <i class="fa fa-user"></i>
                     </span>
-                    <input class="form-control" characterOnly name="firstName" type="text" placeholder="First name"
-                      autocomplete="off" formControlName="firstname">
+                    <input class="form-control" characterOnly name="fullName" type="text" placeholder="Full name"
+                      autocomplete="off" formControlName="fullName">
                   </div>
                   <p class="alert alert-danger mt-1"
-                    *ngIf="formError.firstname.invalid && (formError.firstname.dirty || formError.firstname.touched)">
-                    <span *ngIf="formError.firstname.errors.required">First Name is Required.</span>
-                    <span *ngIf="formError.firstname.errors.minlength">Minlength is 3.</span>
-                    <span *ngIf="formError.firstname.errors.pattern">First Name is not Valid. Please use without
+                    *ngIf="formError.fullName.invalid && (formError.fullName.dirty || formError.fullName.touched)">
+                    <span *ngIf="formError.fullName.errors.required">Full Name is Required.</span>
+                    <span *ngIf="formError.fullName.errors.minlength">Minlength is 3.</span>
+                    <span *ngIf="formError.fullName.errors.pattern">Full Name is not Valid. Please use without
                       space</span>
-                  </p>
-               </div>
-                <div class="mb-3">
-                  <div class="input-group">
-                    <span class="input-group-text">
-                      <i class="fa fa-user"></i>
-                    </span>
-                    <input type="text" characterOnly class="form-control" name="lastname" placeholder="Last name"
-                      autocomplete="off" formControlName="lastname">
-                  </div>
-                  <p class="alert alert-danger mt-1"
-                    *ngIf="formError.lastname.invalid && (formError.lastname.dirty || formError.lastname.touched) ">
-                    <span *ngIf="formError.lastname.errors.required">Last Name is Required.</span>
-                    <span *ngIf="formError.lastname.errors.minlength">Minlenght is 3.</span>
-                    <span *ngIf="formError.lastname.errors.pattern">Last Name is not Valid. Please use without
-                      space</span>
-
                   </p>
                 </div>
-
                 <div class="mb-3">
                   <div class="input-group">
                     <span class="input-group-text">
@@ -91,7 +73,8 @@
                   <p class="alert alert-danger mt-1"
                     *ngIf="formError.password.invalid && (formError.password.dirty || formError.password.touched)">
                     <span *ngIf="formError.password.errors.required">Password is Required.</span>
-                    <span *ngIf="formError.password.errors.pattern">Strong Password is Required ,Use min 8 characters,1 lowercase letter,1 uppercase letter,1 number ,1
+                    <span *ngIf="formError.password.errors.pattern">Strong Password is Required ,Use min 8 characters,1
+                      lowercase letter,1 uppercase letter,1 number ,1
                       special
                       character.</span>
                   </p>
@@ -110,9 +93,9 @@
                     <span *ngIf="formError.confirmpassword.errors.required">Confirm Password is Required.</span>
                   </p>
                   <p class="alert alert-danger mt-1"
-                   *ngIf="signupForm.get('password').value && signupForm.get('confirmpassword').value && signupForm.get('password').value !== signupForm.get('confirmpassword').value">
-                   <span> Confirm password does not match with the password.</span>
-                 </p>
+                    *ngIf="signupForm.get('password').value && signupForm.get('confirmpassword').value && signupForm.get('password').value !== signupForm.get('confirmpassword').value">
+                    <span> Confirm password does not match with the password.</span>
+                  </p>
 
                 </div>
 
@@ -125,8 +108,9 @@
                       <label class="form-check-label" for="genderMale">Male</label>
                     </div>
                     <div class="form-check form-check-inline">
-                      <input class="form-check-input" type="radio" name="gender" formControlName="gender"id="genderFemale" value="female">
-                      <label class="form-check-label" for="genderFemale" >Female</label>
+                      <input class="form-check-input" type="radio" name="gender" formControlName="gender"
+                        id="genderFemale" value="female">
+                      <label class="form-check-label" for="genderFemale">Female</label>
                     </div>
                   </div>
                 </div>
@@ -150,4 +134,3 @@
   </main>
 </div>
 <br><br>
-
