working on demo

--- a/angular/src/app/views/user-profile/user-profile.component.html
+++ b/angular/src/app/views/user-profile/user-profile.component.html
@@ -21,9 +21,9 @@
             </label>
           </div>
           <div class="mt-5 text-center">
-            <h4 class="text-capitalize">{{userStaticDetail.fullName}} {{userStaticDetail.lastname}}</h4>
-            <p class="text-secondary mb-1">{{userStaticDetail.fullName}}</p>
-            <p class="text-muted font-size-sm text-capitalize">Bcc House, First Floor, 8/5/5 Manorama Ganj, INDORE</p>
+            <h4 class="text-capitalize">{{userStaticDetail.fullName}} </h4>
+            <p class="text-muted font-size-sm text-capitalize">Demo Address: Bcc House, First Floor, 8/5/5 Manorama
+              Ganj, INDORE</p>
             <div>
             </div>
           </div>
@@ -42,7 +42,7 @@
         <div class="card-body">
           <div class="row mb-3">
             <label class="col-sm-4 col-form-label fw">
-              First Name
+              Full Name
               <sup [ngClass]="checkvalidation('fullName')"><i class="fa fa-star fa-xs"></i></sup>
             </label>
             <div class="col-sm-8">
