--- a/angular/src/app/views/forgot-password/forgot-password.component.html
+++ b/angular/src/app/views/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
-<div class="app-body">
-  <main class="main d-flex align-items-center">
+<div class="app-body pt-5">
+  <main class="main d-flex align-items-center pt-5">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 mx-auto p-1">
@@ -11,10 +11,10 @@
               <span class="primary-bg"></span>
             </div>
             <div class="card-body">
-              <h1 id="forgotTitle">Forgot Password</h1>
+              <h3 id="forgotTitle">Forgot Password</h3>
               <p class="">Enter the email address associated with your account to reset your password.</p>
               <div class="input-group mb-3">
-                <span class="input-group-text"><i class="far fa-envelope"></i></span>
+                <span class="input-group-text"><i class="fa fa-user"></i></span>
                 <input type="email" class="form-control" placeholder="Email address" id="forgotEmail"
                   name="forgotPassword" [(ngModel)]="forgotPasswordInfo.email">
               </div>
@@ -31,7 +31,7 @@
               </div>
             </div>
           </div>
-          <pre [innerHtml]="forgotPasswordInfo | json"> </pre>
+          <!-- <pre [innerHtml]="forgotPasswordInfo | json"> </pre> -->
         </div>
       </div>
     </div>
