--- a/angular/src/app/views/recovery-password/recovery-password.component.html
+++ b/angular/src/app/views/recovery-password/recovery-password.component.html
@@ -1,5 +1,5 @@
-<div class="app-body">
-  <main class="main d-flex align-items-center">
+<div class="app-body pt-5">
+  <main class="main d-flex align-items-center pt-5">
     <div class="container">
       <div class="row">
         <div class="col-xl-6 col-lg-8 mx-auto p-1">
@@ -19,12 +19,12 @@
                 </div>
               </div>
               <div *ngIf="!expiredLinkErrorMsg">
-                <h1 id="forgotTitle text-left"><span class="pl-4">Recover Your Password </span></h1>
+                <h3 id="forgotTitle text-left"><span class="pl-4">Recover Your Password </span></h3>
                 <div class="mb-3">
                   <div class="input-group">
                     <span class="input-group-text"
                       [ngClass]="{'text-danger' : !userResetInfo.newPass, 'text-success':userResetInfo.newPass}">
-                      <i class="icon-lock"></i></span>
+                      <i class="fa fa-lock"></i></span>
                     <input [type]=viewInputType.newPassType maxlength="10" class="form-control"
                       placeholder="Enter new password" name="newPass" [(ngModel)]="userResetInfo.newPass"
                       (ngModelChange)="patternMatchCheck(userResetInfo.newPass, 'strongPasswordCheck')">
@@ -41,7 +41,7 @@
                   <div class="input-group">
                     <span class="input-group-text"
                       [ngClass]="{'text-danger' : !userResetInfo.newConfPass, 'text-success':userResetInfo.newConfPass}">
-                      <i class="icon-lock"></i>
+                      <i class="fa fa-lock"></i>
                     </span>
                     <input [type]=viewInputType.newConfType maxlength="10" class="form-control"
                       placeholder="Enter confirm password" [(ngModel)]="userResetInfo.newConfPass" name="newConfPass">
@@ -63,7 +63,7 @@
               </div>
             </div>
           </div>
-          <pre [innerHtml]="userResetInfo | json"> </pre>
+          <!-- <pre [innerHtml]="userResetInfo | json"> </pre> -->
         </div>
       </div>
     </div>
