--- a/angular/src/app/views/recovery-password/recovery-password.component.html
+++ b/angular/src/app/views/recovery-password/recovery-password.component.html
@@ -19,7 +19,7 @@
                 </div>
               </div>
               <div *ngIf="!expiredLinkErrorMsg">
-                <h3 id="forgotTitle text-left"><span class="pl-4">Recover Your Password </span></h3>
+                <h3 id="forgotTitle text-left"><span class="">Recover Your Password </span></h3>
                 <div class="mb-3">
                   <div class="input-group">
                     <span class="input-group-text"
