--- a/angular/src/app/views/signup/signup.component.html
+++ b/angular/src/app/views/signup/signup.component.html
@@ -1,10 +1,10 @@
-<div class="app-body mb-5">
+<div class="app-body pt-0">
   <main class="main d-flex align-items-center min-h">
-    <div class="container mt-5 p-2">
+    <div class="container mt-5">
       <div class="row justify-content-center">
         <div class="col-lg-6 col-md-8">
           <div class="card position-relative">
-            <div class="card-body p-4">
+            <div class="card-body ">
               <div class="d-flex custom-border">
                 <span class="secondary-bg"></span>
                 <span class="primary-bg"></span>
@@ -145,7 +145,7 @@
             </div>
           </div>
 
-          <pre [innerHtml]="this.signupForm.value | json"></pre><br><br>
+          <!-- <pre [innerHtml]="this.signupForm.value | json"></pre><br><br> -->
         </div>
       </div>
     </div>
